# pco

./: .gitignore  CMakeLists.txt  artifactmanifest.h  main.cpp  prototype.json  requirments.txt  statemachine.cpp  statemachine.h  updater.cpp  updater.h
app1/: app  manifest.json  manifest.sig  signature.json
app2/: app  config.yml  manifest.json  manifest.sig  signature.json  test.cpp
app3/: manifest.sig  signature.json
client/: CMakeLists.txt  archive.cpp  archive.h  artifactmanifest.cpp  artifactmanifest.h  data.h  deviceinfo.cpp  deviceinfo.h  main.cpp  processmanager.cpp  processmanager.h  sslhttpclient.h  statemachine.cpp  statemachine.h  updatecontext.cpp  updatecontext.h  updater.cpp  updater.h
client/interfaces/: ihttpclient.h
client/ota/: CMakeLists.txt  archive.cpp  artifactmanifest.cpp  artifactmanifest.h  deviceinfo.cpp  deviceinfo.h  main.cpp  processmanager.cpp  processmanager.h  statemachine.cpp  statemachine.h  updatecontext.cpp  updatecontext.h
client/ota/sandboxes/: linuxsandbox.cpp  linuxsandbox.h  linuxsandboxinspecor.cpp  linuxsandboxinspecor.h  sandbox.cpp  sandbox.h
client/ota/stateexecutors/: checkingstateexecutor.cpp  checkingstateexecutor.h  commitingstateexecutor.cpp  commitingstateexecutor.h  committingstateexecutor.cpp  committingstateexecutor.h  dowloadstateexecutor.cpp  dowloadstateexecutor.h  environmentbuildingstateexecutor.cpp  environmentbuildingstateexecutor.h  finalizingstateexecutor.cpp  finalizingstateexecutor.h  idlestateexecutor.cpp  idlestateexecutor.h  installingstateexecutor.cpp  installingstateexecutor.h  preparingstateexecutor.cpp  preparingstateexecutor.h  registrationexecutor.cpp  registrationexecutor.h  stateexecutor.cpp  stateexecutor.h  testingstateexecutor.cpp  testingstateexecutor.h  verifyingstateexecutor.cpp
client/sandboxes/: linuxsandbox.cpp  linuxsandbox.h  linuxsandboxinspecor.cpp  linuxsandboxinspecor.h  sandbox.h
client/stateexecutors/: checkingstateexecutor.cpp  checkingstateexecutor.h  commitingstateexecutor.cpp  commitingstateexecutor.h  dowloadstateexecutor.cpp  dowloadstateexecutor.h  environmentbuildingstateexecutor.cpp  finalizingstateexecutor.cpp  idlestateexecutor.cpp  idlestateexecutor.h  installingstateexecutor.cpp  installingstateexecutor.h  registrationexecutor.cpp  stateexecutor.cpp  stateexecutor.h  testingstateexecutor.cpp  updater.cpp  updater.h  verifyingstateexecutor.cpp  verifyingstateexecutor.h
client/tests/client-test/: CMakeLists.txt
client/tests/client-test/unit/stateexecutors/: checkingstateexecutor_test.cpp
keys/: private.pem
mtls/: ca.key  ca.srl  sert_creation
mtls/client/: client.crt  client.csr  client.key
mtls/server/: server.crt  server.csr  server.key  server_san.cnf
server/: CMakeLists.txt  connectionspull.h  database.cpp  database.h  main.cpp  rolloutsupervisor.cpp  rolloutsupervisor.h  servercontext.cpp  servercontext.h  updatesupervisor.cpp  updatesupervisor.h
server/http/: controller.h  downloadcontroller.cpp  downloadcontroller.h  manifestcontrller.cpp  manifestcontrller.h  registrationcontroller.cpp  registrationcontroller.h  reportcontroller.cpp  reportcontroller.h  server.cpp  server.h  uploadcontroller.cpp  uploadcontroller.h
server/service/: downloadservice.cpp  downloadservice.h  manifestservice.cpp  manifestservice.h  registrationservice.cpp  registrationservice.h  reportservice.cpp  reportservice.h  uploadservice.cpp  uploadservice.h
server/test/: raw.json  req.sh  tool.py
server/test-releases/: tool.py
server/test-releases/1.2.0/: can.sh  manifest.json  manifest.sig  raw.json  req.sh  signature.json
server/test-releases/1.2.0/app4/: app3  test3.cpp
server/test-releases/1.2.1/: manifest.json  manifest.sig  raw.json  signature.json
server/test-releases/1.2.1/app4/: commit.sh  prepare.sh
server/test-releases/1.2.2/: manifest.json  manifest.sig  raw.json  req.sh  signature.json
server/test-releases/1.2.2/app4/: commit.sh  rollback.sh
server/test-releases/1.2.3/: manifest.json  manifest.sig  raw.json  signature.json
server/test-releases/1.2.3/app4/: test2.cpp
server/test/1.2.0/: manifest.json  raw.json  req.sh
server/test/1.2.1/: manifest.json  manifest.sig  raw.json  signature.json
server/test/1.2.2/: manifest.json  manifest.sig  raw.json  signature.json
server/test/1.2.2/app4/: manifest.sig
server/test/app3/: app  manifest.json  test.cpp
server/test/app4/: signature.json
server/testnew/: cu.sh
server/testnew/1.2.0/: can.sh  manifest.json  manifest.sig  raw.json  signature.json
server/testnew/1.2.0/app4/: app2  pre-commit.sh
server/testnew/1.2.1/: manifest.json  manifest.sig  raw.json  signature.json
server/testnew/1.2.1/app4/: pre-commit.sh  prepare.sh
server/testnew/1.2.2/: manifest.json  manifest.sig  raw.json  signature.json
server/testnew/1.2.2/app4/: pre-commit.sh
sim/: Dockerfile  ca.pem  devconfig.json  public.pem  run.sh  run5.sh
testapp/: config.yml  test.cpp
utils/: CMakeLists.txt  utils.cpp  utils.h
utils/common/: CMakeLists.txt  archive.cpp  archive.h  archivetools.cpp  archivetools.h  messagequeue.h  task.h
utils/serverside/: CMakeLists.txt  database.cpp  database.h  serverside.cpp  serverside.h
